Add IPv4 only mode. SNAT port 53 traffic to DNS.

--- a/rootfs/etc/tmpl.d/ipsec.conf
+++ b/rootfs/etc/tmpl.d/ipsec.conf
@@ -25,12 +25,21 @@ conn %default
   leftauth=pubkey
   leftcert=host-cert.pem
   leftsendcert=always
+{{ if and .Env.STRONGSWAN_ENABLE_IPV6 (toBool .Env.STRONGSWAN_ENABLE_IPV6) }}
   leftsubnet=0.0.0.0/0,::/0
+{{ else }}
+  leftsubnet=0.0.0.0/0
+{{ end }}
 
   right=%any
   rightauth=pubkey
+{{ if and .Env.STRONGSWAN_ENABLE_IPV6 (toBool .Env.STRONGSWAN_ENABLE_IPV6) }}
   rightsourceip={{ .Env.STRONGSWAN_IP_POOL }},{{ .Env.STRONGSWAN_IP6_POOL }}
+  rightdns={{ .Env.STRONGSWAN_DNS }},{{ .Env.STRONGSWAN_DNS6 }}
+{{ else }}
+  rightsourceip={{ .Env.STRONGSWAN_IP_POOL }}
   rightdns={{ .Env.STRONGSWAN_DNS }}
+{{ end }}
 
 conn ikev2-pubkey
   auto=add
